Add link to only show discounted products

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,6 +35,7 @@
             <li><%= link_to "Add New Product", "products/new", class: "btn btn-default" %></li>
             <li><a href="/products?input_sort_attribute=price&input_sort_order=asc">Sort by price ascending</a></li>
             <li><a href="/products?input_sort_attribute=price&input_sort_order=desc">Sort by price descending</a></li>
+            <li><a href="/products?input_only_discounted=true">Only show discounted</a></li>
             <li><a href="#">Link</a></li>
             <li><a href="#">Link</a></li>
             <li><a href="#">Link</a></li>
