--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -3,6 +3,7 @@
       <div class="col-sm-8 col-sm-offset-2">
         <div class="product_single">
             <h2><%= @product.name %></h2>
+            <p>Made by <%= @product.supplier.name %> (whose email address is <%= @product.supplier.email %>)</p>
             <% if @product.discounted? %>
               <h4 class="discount-item">Discount item!</h4>
             <% else %>
