--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -7,7 +7,7 @@
             <div class="product_single">
               <h2 class="product_header"><%= product.name %></h2>
               <p>Price: <%= number_to_currency(product.price) %></p>
-              <a href="/products/<%= product.id %>" title="View Product"><img src="<%= product.image %>" alt="<%= product.name %>" class="img-responsive product_single_image"></a>
+              <a href="/products/<%= product.id %>" title="View Product"><img src="<%= product.images.first.url %>" alt="<%= product.name %>" class="img-responsive product_single_image"></a>
               <p>Description: <%= product.description %></p>
             </div>
           </div>
