--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,7 +32,7 @@
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><span class="glyphicon glyphicon-align-justify" aria-hidden="true"></span></span></a>
           <ul class="dropdown-menu" role="menu">
-            <li><%= link_to "Add New Product", "products/new", class: "btn btn-default" %></li>
+            <li><%= link_to "Add New Product", "/products/new", class: "btn btn-default" %></li>
             <li><a href="/products?input_sort_attribute=price&input_sort_order=asc">Sort by price ascending</a></li>
             <li><a href="/products?input_sort_attribute=price&input_sort_order=desc">Sort by price descending</a></li>
             <li><a href="/products?input_only_discounted=true">Only show discounted</a></li>
