--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -16,6 +16,9 @@
               <div>
                 Description: <input type="text" name="description"> 
               </div>
+              <div>
+                Supplier id: <input type="text" name="supplier_id"> 
+              </div>
               <input type="submit" value="Process New Nerdiness">
             <% end %>
           </div>
