--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -17,7 +17,12 @@
                 Description: <input type="text" name="description"> 
               </div>
               <div>
-                Supplier id: <input type="text" name="supplier_id"> 
+                Supplier id: 
+                <select name="supplier_id">
+                  <% @suppliers.each do |supplier| %>
+                    <option value="<%= supplier.id %>"><%= supplier.name %></option>
+                  <% end %>
+                </select>
               </div>
               <input type="submit" value="Process New Nerdiness">
             <% end %>
