--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,6 +32,8 @@
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><span class="glyphicon glyphicon-align-justify" aria-hidden="true"></span></span></a>
           <ul class="dropdown-menu" role="menu">
+            <li><a href="/carted_products"><span class="glyphicon glyphicon-shopping-cart"></span> Shopping cart</a></li>
+            <li class="divider"></li>
             <li><%= link_to "Add New Product", "/products/new", class: "btn btn-default" %></li>
             <li><a href="/products?input_sort_attribute=price&input_sort_order=asc">Sort by price ascending</a></li>
             <li><a href="/products?input_sort_attribute=price&input_sort_order=desc">Sort by price descending</a></li>
