--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -30,9 +30,10 @@
               Quantity: <input type="text" name="form_quantity">
               <input type="submit" value="Add to cart!">
             <% end %>
-
-            <%= link_to "Edit", "/products/#{@product.id}/edit", class: "btn btn-success" %>
-            <%= link_to "Delete", "/products/#{@product.id}", {method: :delete, class: "btn btn-danger" }%>
+            <% if current_user && current_user.admin %>
+              <%= link_to "Edit", "/products/#{@product.id}/edit", class: "btn btn-success" %>
+              <%= link_to "Delete", "/products/#{@product.id}", {method: :delete, class: "btn btn-danger" }%>
+            <% end %>
         </div>
       </div>
     </div>
